# maat-ecosystem

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONSTITUTION.md  DEV_SETUP.md  EVENTS.md  LICENSE  MEMORY.md  POLICY.md  README.md  pyproject.toml
archive/: README-legacy-standalone-root.md  README.md
docs/: ENDPOINTS-AND-DECISIONS.md  FIRST-RUN.md  GITMAAT-CONNECT.md  INITIATION.md  LAB-BENCH-WORKFLOW.md  LAB-CANONICAL-TREE-AND-STACK.md  MAAT-AUDIT-ACTION-PLAN.md  MAAT-AUDIT-TEHUTI-GUARD-BUILD-2026-06-13.md  MAAT-AUDIT-TEHUTI-GUARD-REPO-STRUCTURE.md  MAAT-PRODUCT-MAP.md  MAAT-WORKSPACE-AUDIT-2026-07-04.md  PUSH-SAFETY.md  RUNTIME-HOOKUP.md  SETUP-WITH-AGENT.md  SYSTEM-CONNECTIONS.md  TEHUTI-GUARD-PRODUCTS.md  TEHUTI-SENTINEL-GUARD-ADAPTER-CONTRACT.md  TEHUTI-SENTINEL-JUDGMENTS.md  TEHUTI_GUARD_V2_CONSTITUTIONAL_REBUILD.md  TRUTH-AND-VERIFICATION.md  architecture.md
maat-cli/: maat
maat-core/: config.yaml
maat-ecosystem/: DISTRIBUTION.md  LAB-WORKSPACE.md  MANIFEST.ka  README.md
maat-memory/: README.md
maat-openclaw-skill/: SKILL.md
maatbench/: README.md  __init__.py  run.py
memory/: 2026-03-06.md  2026-03-25-2244.md  2026-03-26-1438.md  2026-03-30.md  2026-04-07.md  2026-04-09-conversation-metadata.md  2026-05-07-fl-trust-law.md  2026-05-07.md  2026-05-09-fl-trust-law-promotion.md  staydangerous-server.md  tehuti_research_methods_analysis.md
scripts/: lab-runtime-check.sh  (+5 more)
tehuti-guard/guard/: README.md  pyproject.toml
tehuti-guard/guard/tehuti_guard/: __init__.py  cli.py  covenant_adapter.py  memory_sink.py  models.py  rules.py  server.py
(+172 files in other folders)
