[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tehuti-guard-api"
version = "0.1.0"
description = "Tehuti Guard v1 decision API — consumes Sentinel unified view (Python)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
tehuti-guard-serve = "tehuti_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tehuti_guard"]

[tool.hatch.build.targets.sdist]
include = ["tehuti_guard", "README.md", "pyproject.toml"]
